Большинство тестов, добавлена Jacoco